--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.LiquidPlayer:LiquidCore:0.5.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
 
 }
