--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,15 @@ android {
         }
     }
 }
+repositories{
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -37,5 +42,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.0'
+    //compile 'com.github.kaaes:spotify-web-api-android:0.4.1'
+    implementation project(":spotify-web-api-android-0.4.1")
+
+
 
 }
