--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'Mathavinash16'
+            storeFile file('C:/Users/Avinash Nandakumar/Documents/mykey.jks')
+            storePassword 'Mathavinash16'
+        }
+    }
     compileSdkVersion 27
-    compileOptions{
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -10,15 +18,22 @@ android {
         applicationId "sideprojects.carjam"
         minSdkVersion 24
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "4.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 repositories{
@@ -27,26 +42,23 @@ repositories{
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(":spotify-app-remote-release-0.6.0")
-    implementation project(":spotify-auth-release-1.1.0")
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation project(':spotify-app-remote-release-0.6.0')
+    implementation project(':spotify-auth-release-1.1.0')
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.LiquidPlayer:LiquidCore:0.5.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     //compile 'com.github.kaaes:spotify-web-api-android:0.4.1'
-    implementation project(":spotify-web-api-android-0.4.1")
+    implementation project(':spotify-web-api-android-0.4.1')
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-
-
-
 }
