--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sideprojects.carjam">
+    package="sideprojects.carjam"
+   >
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.WRITE_SMS"/>
@@ -16,6 +17,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
